click close div functionallity added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <!-- Type your code here -->
     <div id="background"><img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/cricpro-bg.png" alt=""></div>
+    
     <div id="container">
         <div id="logo">
             <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/cricpro-logo.JPG" alt="">
@@ -20,6 +21,8 @@
             <br>
         </div>
         <div id="info"></div>
+        <div id="cover"></div>
+        <div id="table">
         <table>
             <thead>
             <tr>
@@ -106,7 +109,8 @@
                 <td colspan="6"><span class="link" onclick="pointMe(6)"><a href="#" id="SR">Suresh Raina</a>,</span><span class="link" onclick="pointMe(7)"><a href="#" id="HS">Harbhajan Singh</a>,</span><span class="link" onclick="pointMe(8)"><a href="#" id="ZR">Zaheer Khan</a>,</span><span class="link" onclick="pointMe(9)"><a href="#" id="MP">Munaf Patel</a>,</span><span class="link" onclick="pointMe(10)"><a href="#" id="SSR">S Sreesanth</a></span></td>
             </tr>
         </tbody>
-        </table>    
+        </table> 
+    </div>   
         <br>
         <footer class="footer">Made with <span style="color: red;">♥️</span> by Kalvian</footer>
     </div>
