--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div id="info"></div>
         <div id="cover"></div>
         <div id="table">
-        <table>
+        <table id="tableon">
             <thead>
             <tr>
                 <th align="left">India Innings</th>
